--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -22,6 +22,7 @@ This file is here just so I'm reminded to keep track of changes as I do em.
 * GetShowOffDebugMode
 * UnequipItems
 * GetEquippedItems
+* IsBaseForm
 
 
 ******DON'T FORGET TO UPDATE THE PLUGIN VERSION BEFORE EVERY RELEASE*********
