--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -31,5 +31,6 @@ This file is here just so I'm reminded to keep track of changes as I do em.
 * RandSeeded
 * GetRandomPercentSeeded
 * IsReferenceCloned
+* AdvanceSeed
 
 ******DON'T FORGET TO UPDATE THE PLUGIN VERSION BEFORE EVERY RELEASE*********
