--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -42,7 +42,7 @@ This file is here just so I'm reminded to keep track of changes as I do em.
 
 ===New Functions:
 * IsTemporaryReference
-
+* HasScriptFunction
 
 (Template:)
 //===v???
