--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -44,7 +44,8 @@ This file is here just so I'm reminded to keep track of changes as I do em.
 * IsTemporaryReference
 * GetPCHasScriptedFastTravelOverride
 * GetPCCanFastTravel
-
+* WeaponHasFlag
+* ActorHasBaseFlag
 
 (Template:)
 //===v???
