--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -46,6 +46,7 @@ This file is here just so I'm reminded to keep track of changes as I do em.
 * GetPCCanFastTravel
 * WeaponHasFlag
 * ActorHasBaseFlag
+* RemoveAllItemsShowOff
 
 (Template:)
 //===v???
