--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -62,6 +62,8 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 ===New Functions:
 * ForceWeaponJamAnim
+* DisableAlt
+* EnableAlt
 
 
 
