Add ToggleQuestMessages (for el senor Trooper)

--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -66,6 +66,7 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 * EnableAlt
 * GetCalculatedSkillPoints
 * GetLevelUpMenuPoints
+* ToggleQuestMessages
 
 
 
