Fix ToggleQuestMessages for quest objectives

--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -69,6 +69,15 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 * ToggleQuestMessages
 
 
+//===v1.20
+
+===Bug Fixes:
+* ToggleQuestMessages now also silences quest objective messages.
+
+===New Functions:
+* 
+
+
 
 
 (Template:)
