--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -73,10 +73,10 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 ===Bug Fixes:
 * ToggleQuestMessages now also silences quest objective messages.
-* GetLevelUpMenuPoints now accounts for iLevelsPerPerk gamesetting (and skipping getting perks each level or so).
+* GetLevelUpMenuPoints now accounts for iLevelsPerPerk gamesetting (and skipping getting perks each level or so). Thanks Stewie!
 
 ===New Functions:
-* 
+* GetCalculatedPerkPoints
 
 
 
