--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -77,6 +77,9 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 ===New Functions:
 * GetCalculatedPerkPoints
+* GetLevelUpMenuCurrentPage
+* SetLevelUpMenuCurrentPage
+* ShowPerkMenu
 
 
 
