update changelog w/ cond function note

--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -86,6 +86,7 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 ===Changes:
 * GetNumActorsInRangeFromRef and GetNumCombatActorsFromActor both have a new OnlyDetectedActors filter flag.
+* GetCreatureTurningSpeed and GetCreatureFootWeight are made available as condition functions.
 
 ===Bug Fixes:
 *
