GetHealthEffectsSum prototype, add GetPipboyRadioVoiceEntryData

--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -102,7 +102,7 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 * CreateFolder (made by anhatthezoo!)
 * Get/SetExplosionRefRadius
 * GetActorValueDamage (alias: GetAVDamage)
-
+* GetPipboyRadioVoiceEntryData
 
 
 (Template:)
