--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -119,6 +119,8 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 ===New Functions:
 *Get/SetIngestibleConsumeSound
+*SetFactionCombatReactionTemp
+*GetEquippedItemRefForItem
 
 
 
