--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -137,6 +137,14 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 *TopicInfoSetNthResponseString
 
 
+//===v1.35
+===Bug Fixes:
+* 
+
+===New Functions:
+*GetCanHaveHealth
+
+
 ====== (Template:)
 
 //===v???
