more math.h refactoring

--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -153,6 +153,14 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 *RemoveFormFromLeveledList
 
 
+//===v1.40
+===Bug Fixes:
+* 
+
+===New Functions:
+*
+
+
 ====== (Template:)
 
 //===v???
