--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -175,7 +175,7 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 //===v???
 ===Bug Fixes:
-* 
+*Refactored functions with array arguments to work with inline (used to only work with array variables).
 
 ===New Functions:
 *
