require xNVSE 6.2.5, WriteArrayToJSONFile can now return non-arrays
WriteArrayToJSONFile is now WriteToJSONFile, since it'll make it easier to translate back-and-forth from an NVSE value directly to a JSON value.  Otherwise, single elements would get replaced as arrays containing single elements, which would get weird.

Also easier syntax if you know the type that'll be returned in advance.

--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -176,7 +176,7 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 *Refactored functions with array arguments to work with inline (used to only work with array variables).
 
 ===New Functions:
-*ReadArrayFromJSONFile
+*ReadFromJSONFile
 
 
 ====== (Template:)
