--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -174,6 +174,7 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 //===v1.45
 ===Bug Fixes:
 *Refactored functions with array arguments to work with inline (used to only work with array variables).
+*Fix TopicInfoSetResponseStrings string leak
 
 ===New Functions:
 *ReadFromJSONFile
