--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -181,6 +181,7 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 ===New Functions:
 *ReadFromJSONFile
+*WriteToJSONFile
 
 
 ====== (Template:)
