--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -177,7 +177,7 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 ===Bug Fixes:
 *Refactored functions with array arguments to work with inline (used to only work with array variables).
-*Fix TopicInfoSetResponseStrings string leak
+*Fix TopicInfoSetResponseStrings string memory leak
 
 ===New Functions:
 *ReadFromJSONFile
