polish and add GetCalculatedItemValue

--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -182,6 +182,7 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 ===New Functions:
 *ReadFromJSONFile
 *WriteToJSONFile
+*GetCalculatedItemValue
 
 
 ====== (Template:)
