--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -184,6 +184,8 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 *WriteToJSONFile
 *GetCalculatedItemValue
 
+*Ini??
+
 
 ====== (Template:)
 
