--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -217,6 +217,12 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 *GetCalculatedItemValue
 *ResetInteriorAlt
 
+
+//===v1.46
+
+= Bug Fixes:
+*Fixed ReadJSONFromFile sometimes having corrupted string data.
+
 ====== (Template:)
 
 //===v???
