--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -220,8 +220,29 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 //===v1.46
 
+*AS OF THIS VERSION, xNVSE 6.2.6 or greater is required.*
+
 = Bug Fixes:
 *Fixed ReadJSONFromFile sometimes having corrupted string data.
+
+
+//===v1.50
+
+*AS OF THIS VERSION, xNVSE 6.2.7 or greater is required.*
+
+===Bug Fixes:
+* ShowPerkMenu: 
+- Copied code from Tweaks to prevent perks from being selected if there are none to assign (used to go to -1 perks).
+- Copied code from Tweaks to force the perk menu to open even if not on a perk level (allows previewing perks).
+- Copied code from Tweaks to allow multiple perks to be selected.
+
+===New Functions:
+* SetEnableParent
+* GetEquippedWeapon
+* GetEquippedWeaponRef
+
+===New Event Handlers (for SetEventHandler):
+
 
 ====== (Template:)
 
