--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -287,10 +287,21 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 ===Bug Fixes:
 * Fixed GetIngestibleConsumeSound causing a crash if the ingestible has no consume sound.
-* Fixed hook for "ShowOff:OnProjectileCreate" causing issues with continuous beam-type projectiles
+* Fixed hook for "ShowOff:OnProjectileCreate" causing issues with "continuous beam"-type projectiles
+* Fixed GetEquippedItemRefForItem not working properly with formlists.
 
 ===New Functions:
-* Fixed GetEquippedItemRefForItem not working properly with formlists.
+* GetIsPlayerOverencumbered - 'sup
+* RefillPlayerAmmo
+* AuxTimerStart
+* AuxTimerStop
+* AuxTimerPaused
+* AuxTimerTimeElapsed
+* AuxTimerTimeToCountdown
+* AuxTimerTimeLeft
+* SetOnAuxTimerStartHandler
+* SetOnAuxTimerStopHandler
+* ClearShowoffSavedData
 
 
 ====== (Template:)
