--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -303,6 +303,16 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 * SetOnAuxTimerStopHandler
 * ClearShowoffSavedData
 
+//===v1.60
+===Bug Fixes:
+* 
+
+===New Functions:
+*
+
+===Function changes:
+* RefillPlayerAmmo now only shows error console messages if console is open, and returns 1/0 for success.
+
 
 ====== (Template:)
 
