--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -325,7 +325,7 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 * "ShowOff:OnReadBook"
 * "ShowOff:OnDispositionChange"
 * "ShowOff:OnAdd"
-* "ShowOff:OnPreEquip" ???????
+* "ShowOff:OnPreActivateInventoryItemAlt"
 
 
 ====== (Template:)
