futile attempt at a fix for NPCs

--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -310,7 +310,7 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 *Also, the ShowOff INI file is now optional, meaning a warning message will no longer appear if it is not found*
 
 ===Vanilla fixes:
-* UnequipItem and spinoffs: fixes the "noEquip" flag, which never worked.
+* UnequipItem and spinoffs: fixes the "noEquip" flag, which never did anything.
 
 ===Bug Fixes:
 * Removed confusing hook conflict detection msg related to Tweaks.
