--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -326,6 +326,16 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 * "ShowOff:OnDispositionChange"
 * "ShowOff:OnAdd"
 
+//===v1.61
+===Bug Fixes:
+* Fix innacurate projectile position in OnProjectileImpact/Destroy.
+
+===New Functions:
+*
+
+===Function changes:
+*
+
 
 ====== (Template:)
 
