--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -352,6 +352,9 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 * Add RunOnTimerUpdateEvent flag for AuxTimers
 * Fixed AuxTimerStop/Start potentially causing crashes inside the timer events.
 
+===General changes:
+* Better hook conflict error message in log.
+
 ====== (Template:)
 
 //===v???
