--- a/SHOWOFF-NVSE/Changelog.txt
+++ b/SHOWOFF-NVSE/Changelog.txt
@@ -471,13 +471,15 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 //===v1.82
 ===Bug Fixes:
-*
+* Fixed GetIsActivationPromptShown not working after exiting menus
+* Fixed GetCalculatedItemValue corrupting memory and crashing the game
+* Fixed BaseCopyFaceGenFrom corrupting memory and crashing the game
 
 ===New Functions:
+* ToANSIChar 
 * GetWorldOffsetPosArray
-
-===Function changes:
-*
+* BaseCopyFaceGenFrom
+* GetSpellUsageNumEx
 
 ====== (Template:)
 
